--- a/posts/20251111-week0.qmd
+++ b/posts/20251111-week0.qmd
@@ -5,8 +5,8 @@ date: 2025-11-11
 abstract: |
   Short description of what this project is about, goals, and the
   workflow you plan to follow.
-doi: ""               # will be filled later after Zenodo release
-license: "CC-BY-4.0"
+doi: "10.5281/zenodo.17584973"
+license: "CC-BY-NC-SA-4.0"
 format: html
 ---
 
