--- a/posts/20251111-week0.qmd
+++ b/posts/20251111-week0.qmd
@@ -11,7 +11,10 @@ format: html
 ---
 
 # Introduction
-Write a few paragraphs about why the project matters.
+The LLM Optimizer will start small. The main idea is to leverage my previous knowledge using Weightless Neural Networks (WNN [@wilkie1995wisard]), Simulated Annealing (SA [@kirkpatrick1983annealing]), Tabu Search (TS [@glover1989tabu1]) and Genetic Algorithm (GA [@holland1975adaptation]) for optimization tasks and apply to a modern problem, Large Language Models (LLM [@vaswani2017attention]).
+
+That's how a meta-heuristic prompt optimization came to be. Use NN/SA/TS/GA to discover high‑quality prompts for a target task. A tiny RAM‑net (a weightless neural network) is trained as a surrogate that quickly predicts how good a prompt will be, so the meta‑heuristic can explore millions of candidates without calling the LLM each time.
+
 
 # Timeline (example)
 | Week | Milestone |
@@ -23,3 +26,7 @@ Write a few paragraphs about why the project matters.
 # Resources
 - Data repository: *link later*
 - Code repo: *link later*
+
+# References
+::: {#refs}
+::: 
