--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,16 @@
 % ==============================
 % 1️⃣ Weightless Neural Networks
 % ==============================
+@inproceedings{ludermir1999weightless,
+  author    = {Teresa Bernarda Ludermir, André de Carvalho, António P. Braga and Marcílio C. P. de Souto},
+  title     = {Weightless Neural Models: A Review of Current and Past Works},
+  booktitle = {Neural Computing Surveys 2 - ICSI Berkeley},
+  year      = {1999},
+  pages     = {41--61},
+  address   = {Berkeley, USA},
+  url       = {https://www.cin.ufpe.br/~tbl/artigos/vol2_2-ncs-1999.pdf}
+}
+
 @inproceedings{wilkie1995wisard,
   author    = {Wilkie, Christopher and Storie, David},
   title     = {The WiSARD: a weightless neural network for pattern classification},
@@ -298,9 +308,9 @@
   author    = {Liu, Y. and Ott, M. and Goyal, N. and Du, J. and Joshi, M. and Chen, D. and ... & Stoyanov, V.},
   title     = {Pre‑train, Prompt, and Predict: A Survey on Large Language Models},
   journal   = {arXiv preprint},
-  year      = {2022},
-  eprint    = {2205.06199},
+  year      = {2021},
+  eprint    = {2107.13586},
   archivePrefix = {arXiv},
   primaryClass = {cs.CL},
-  url       = {https://arxiv.org/abs/2205.06199}
+  url       = {https://arxiv.org/abs/2107.13586}
 }
