preparation: fixing Antônio's name.

--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,7 @@
 % 1️⃣ Weightless Neural Networks
 % ==============================
 @inproceedings{ludermir1999weightless,
-  author    = {Teresa Bernarda Ludermir, André de Carvalho, António P. Braga and Marcílio C. P. de Souto},
+  author    = {Teresa Bernarda Ludermir, André de Carvalho, Antônio P. Braga and Marcílio C. P. de Souto},
   title     = {Weightless Neural Models: A Review of Current and Past Works},
   booktitle = {Neural Computing Surveys 2 - ICSI Berkeley},
   year      = {1999},
